# lithos-gotmpl-rs

./: .coderabbit.yaml  .editorconfig  .gitignore  .yamllint.yaml  AGENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  NOTICE  README.md  SECURITY.md  SUPPORT.md  about.toml  deny.toml  justfile  mise.toml  release-plz.toml  renovate.json  rust.just  sonar-project.properties
.devcontainer/: devcontainer.json  postCreate.sh
.github/: justfile  mergify.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-tools/: action.yml
.github/workflows/: ci.yml  codeql.yml  deep-testing.yml  ossf-scorecard.yml  pr.yml  scorecard.yml  sonar.yml
LICENSES/: BSD-3-Clause.txt  Unicode-3.0.txt  justfile
crates/lithos-gotmpl-core/: Cargo.toml
crates/lithos-gotmpl-core/examples/: analyze.rs  custom_registry.rs  escape_helpers.rs
crates/lithos-gotmpl-core/src/: lib.rs
crates/lithos-gotmpl-core/tests/: test_cases.rs
crates/lithos-gotmpl-engine/: Cargo.toml
crates/lithos-gotmpl-engine/src/: analyze.rs  ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  runtime.rs  runtime_hot.rs  telemetry.rs
crates/lithos-gotmpl-engine/tests/: analyze.rs  go_parity.rs  test_cases.rs
crates/lithos-sprig/: Cargo.toml
crates/lithos-sprig/examples/: flow_and_lists.rs  sprig_template.rs
crates/lithos-sprig/src/: lib.rs
crates/lithos-sprig/src/functions/: dict.rs  flow.rs  lists.rs  mod.rs  string_slice.rs  strings.rs
crates/lithos-sprig/tests/: compat.rs  coverage.rs
docs/: README.md  function-coverage.md  go-parser-test-candidates.md  index.md  releasing.md  template-syntax-coverage.md  testing-guidelines.md
docs/development/: README.md
docs/guides/: testing.md
docs/legal/: license-files.toml  notice-snippets.txt
docs/reference/: function-coverage.md  template-syntax-coverage.md
docs/security/: threat-model.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: template_parse.rs  template_render.rs
go-sanity/: LICENSE  go.mod  go.sum  justfile  main.go  main_test.go
go-sanity/tmpkeys/: main.go
scripts/: check_licenses.py  check_notice.py  ci.just  release.just  tools.just
test-cases/: lithos-gotmpl-core.json  lithos-gotmpl-engine.json  lithos-sprig.json
test-cases/sprig/nested-default/: expected.txt  input.tmpl
