[package]
name = "lithos-gotmpl-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
once_cell = "1"
serde_json = "1"
lithos-gotmpl-engine = { path = "../crates/lithos-gotmpl-engine" }
lithos-gotmpl-core = { path = "../crates/lithos-gotmpl-core" }
lithos-sprig = { path = "../crates/lithos-sprig" }

[[bin]]
name = "template_parse"
path = "fuzz_targets/template_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "template_render"
path = "fuzz_targets/template_render.rs"
test = false
doc = false
bench = false
