[package]
name = "lithos-gotmpl-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lithos-gotmpl-engine = { path = "../lithos-gotmpl-engine" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
