[package]
name = "lithos-sprig"
version = "0.1.0"
edition.workspace = true

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lithos-gotmpl-engine = { path = "../lithos-gotmpl-engine" }
lithos-gotmpl-core = { path = "../lithos-gotmpl-core" }

[dev-dependencies]
tempfile = "3"
