[package]
name = "lithos-sprig"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Sprig-compatible helper library built on top of lithos-gotmpl-core for Rust-based gotmpl rendering."
repository = "https://github.com/hans-d/lithos-gotmpl-rs"
homepage = "https://github.com/hans-d/lithos-gotmpl-rs"
documentation = "https://docs.rs/lithos-sprig"
readme = "../../README.md"
keywords = ["template", "gotmpl", "sprig", "helpers", "lithos"]
categories = ["template-engine"]

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
lithos-gotmpl-engine = { workspace = true }
lithos-gotmpl-core = { workspace = true }

[dev-dependencies]
tempfile = "3"
